opa/node-port-policy/clusterip-svc-blue.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blue-svc-clusterip
spec:
  selector:
    app: blue
  ports:
  - port: 8080
    targetPort: 8080
