opa/node-port-policy/nodeport-svc-blue.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blue-svc-nodeport
spec:
  type: NodePort
  selector:
    app: blue
  ports:
  - port: 8080
    targetPort: 8080
